expand gameplay and improve UI: - add support for touch gestures - simplify the reset of style - fix UI for gameover display and snake position on mobile

--- a/index.css
+++ b/index.css
@@ -228,6 +228,7 @@ gameover display
 }
 
 #gameover-display h2 {
+    text-align: center;
     font-size: 5rem;
     color: rgb(198, 43, 43);
     text-shadow: -2px -2px white, -2px 2px white, 2px 2px white, 2px -2px white,
